--- a/src/app.scss
+++ b/src/app.scss
@@ -41,6 +41,9 @@
 .mb-5 {
     margin-bottom: 3rem !important;
 }
+.mr-2 {
+    margin-right: 0.75rem !important;
+}
 .mr-3 {
     margin-right: 1rem !important;
 }
